Ahora si ya entendi bien xD

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             var id = asesor.memberID;
             var key = snapshot.key();
             localStorage.setItem("name", nombreAsesor);
-            localStorage.setItem("key", id);
+            localStorage.setItem("key", key);
             localStorage.setItem("id", id);
             valido = true;
           });
