--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
             var nombreAsesor = asesor.firstName +" "+ asesor.lastName;
             var id = asesor.memberID;
             var key = snapshot.key();
+            console.log(nombreAsesor);
+            console.log(key);
+            console.log(id);
             localStorage.setItem("name", nombreAsesor);
-            localStorage.setItem("key", id);
+            localStorage.setItem("key", key);
             localStorage.setItem("id", id);
             valido = true;
           });
