--- a/panelPaginasPersonales.html
+++ b/panelPaginasPersonales.html
@@ -57,7 +57,6 @@
                   var user = String(localStorage.getItem("name"));
                   if(user != "null") document.write(user);
                   else document.write("usuario");
-
                 </script>
                 </a>
                 <li><a href="panelDeControl.html">Panel de Control</a></li>
@@ -73,8 +72,16 @@
       </div>
     </div>
     <div class="form-signin">
-      <button class="btn btn-lg btn-primary btn-block" type="submit" id="agregarPagina">Página Personal</button>
-      
+      <a class="btn btn-lg btn-primary btn-block" type="submit" href="trainer.html">Página Personal</a>
+      <a class="btn btn-lg btn-primary btn-block " type="button">
+        Registro general <span class="badge">4</span>
+      </a>
+      <a class="btn btn-lg btn-primary btn-block" type="button">
+        Registro seminarios (Lunes) <span class="badge">4</span>
+      </a>
+      <a class="btn btn-lg btn-primary btn-block" type="button">
+        Registro seminarios (Jueves) <span class="badge">4</span>
+      </a>
     </div>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
@@ -85,19 +92,11 @@
     }else{
       window.location.assign("index.html");
     }*/
-    var agregarPagina = document.getElementById('agregarPagina');
-    var listarPaginas = document.getElementById('listarPaginas');
-
-    agregarPagina.addEventListener('click', function () {
-      window.location.assign("trainer.html");
-    });
-    listarPaginas.addEventListener('click', function () {
-      window.location.assign("listarPaginas.html");
-    });
     var cerrar = document.getElementById('cerrarSesion');
     cerrar.addEventListener('click', function () {
-      localStorage.removeItem("nombre");
-      localStorage.removeItem("userID");
+      localStorage.removeItem("name");
+      localStorage.removeItem("key");
+      localStorage.removeItem("id");
       window.location.assign("index.html");
     });
     </script>
