--- a/perfil_entrenador.html
+++ b/perfil_entrenador.html
@@ -56,13 +56,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <li class="active">
-                <a href="#">Bienvenid@,
-                  <script>
-                    var user = String(localStorage.getItem("name"));
-                    if(user != "null") document.write(user);
-                    else document.write("usuario");
-
-                  </script>
+                <a href="#">Bienvenid@, usuario
                 </a>
               </li>
               <li><a href="#">Panel de Control</a></li>
