Alineación de imagen de perfil de entrenador

--- a/perfil_entrenador.html
+++ b/perfil_entrenador.html
@@ -75,7 +75,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-4 col-md-4"> 
-        <div id="imagenEntrenador"></div>
+        <div id="imagenEntrenador" class="imagenPerfil"></div>
       </div>
       <div class="col-xs-0 col-md-1"> 
       </div>
