Se agregó el codigo B192384781 de los entrenadores

--- a/perfil_entrenador.html
+++ b/perfil_entrenador.html
@@ -79,6 +79,14 @@
           </div>
           <div class="panel-body">
             <h4>
+              <label> Código: </label>
+              <div class="campo">
+                <h4 id="idEntrenador">  </h4>
+              </div>
+            </h4>
+          </div>
+          <div class="panel-body">
+            <h4>
               <label> Nombre: </label>
               <h4 id="nombreEntrenador">  </h4>
             </h4>
@@ -298,10 +306,12 @@
       //console.log(data);
       var divNombre = document.getElementById('nombreEntrenador');
       var divBiografia = document.getElementById('biografiaEntrenador');
+      var divCodigo = document.getElementById('idEntrenador');
       var codigo = document.getElementById('codigoEntrenador');
 
       divNombre.innerHTML = data.nombre;
       divBiografia.innerHTML = data.biografia;
+      divCodigo.innerHTML = data.codigo;
       codigo.innerHTML = "Ingresa el código <b>"+key+"</b>";
     }
   </script>
