Se agregó videos

--- a/perfil_entrenador.html
+++ b/perfil_entrenador.html
@@ -182,16 +182,11 @@
             <label><h4><b> Videos </b></h4></label>
           </div>
           <div class="panel-body">
-            <h4>
-              <label> Lunes: </label>
-              <a href="https://livestream.com/accounts/20125261/events/6251835"> Reunión de oportunidad </a>
-            </h4>
-          </div>
-          <div class="panel-body">
-            <h4>
-              <label> Jueves: </label>
-              <a href="https://livestream.com/accounts/20125261/events/6307112"> Seminario de nutrición </a>
-            </h4>
+            <div class="embed-responsive embed-responsive-16by9">
+              <video controls>
+                <source src="videos/videoApp.mp4" type="video/mp4">
+              </video>
+            </div>
           </div>
         </div>
       </div>
