--- a/panelPaginasPersonales.html
+++ b/panelPaginasPersonales.html
@@ -76,7 +76,7 @@
     </div>
     <div class="form-signin" id="buttons">
       <button class="btn btn-lg btn-primary btn-block" type="submit" id="agregarPagina">Página Personal</button>
-      <a class="btn btn-lg btn-primary btn-block " type="button">
+      <a class="btn btn-lg btn-primary btn-block" type="button" href="lista_prospecto_general.html">
         Registro general <span class="badge">4</span>
       </a>
       <a class="btn btn-lg btn-primary btn-block" type="button">
