--- a/lista_prospecto_general.html
+++ b/lista_prospecto_general.html
@@ -14,6 +14,7 @@
     <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
     <link href="dist/css/signin.css" rel="stylesheet">
     <link href="dist/css/custom.css" rel="stylesheet">
+    <link href="dist/css/body.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
 
   <!-- Bootstrap core JavaScript
@@ -54,7 +55,7 @@
             <li><a href="panelPaginasPersonales.html">Panel de Control</a></li>
             </li>
             <li>
-              <a id="Generar Reporte">Generar Reporte EXCEL</a>
+              <a id="generarReporte" href="#">Generar Reporte EXCEL</a>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
@@ -63,13 +64,21 @@
         </div>
     </div>
   </div>
-  <!-- CONTAINER DE BUSQUEDA -->
+  <!-- CONTAINER DE LA TABLA -->
   <div class="container" id="hideContainer">
     <div class="jumbotron">
       <div align="center"><h3>Lista de Prospectos del Registro General</h3></div>
-      <!-- BUSCAR -->
+      <!-- PAGINACIÓN -->
+      <div align="center">
+        <nav aria-label="...">
+          <ul class="pager">
+            <li><a href="#" id="previus">Anterior</a></li>
+            <li><a href="#" id="next">Siguiente</a></li>
+          </ul>
+        </nav>
+      </div>
       <div class="table-responsive">
-        <table class="table table-striped marginTop15" id="tablaBusqueda">
+        <table class="table table-striped" id="tablaBusqueda">
           <thead>
             <tr>
               <th>#</th><!-- class="col-md-2" -->
@@ -85,315 +94,17 @@
           </thead>
         </table>
       </div>
+      <div align="center">
+        <nav aria-label="...">
+          <ul class="pager">
+            <li><a href="#" id="previus">Anterior</a></li>
+            <li><a href="#" id="next">Siguiente</a></li>
+          </ul>
+        </nav>
+      </div>
     </div> <!-- /jumbotron -->
   </div> <!-- /container -->
-
-
-  <footer class ="bs-docs-footer textcolorWhite" role="contentinfo">
-    <p>
-      <h3>Siguenos en</h3>
-    </p>
-    <p>
-      <a href="#facebook"><img src="images/social/facebook.png" width="60px" height="60px"></img></a>
-      <a href="#youtube"><img src="images/social/youtube.png" width="60px" height="60px"></img></a>
-      <a href="#instagram"><img src="images/social/instagram.png" width="60px" height="60px"></img></a>
-    </p>
-    <p >&copy; 2016 Nivel 10. All rights reserved.
-      <a href="#privacy">Privacy</a><font color=white size="3">.</font>
-      <a href="#terms">Terms of Service</a>.
-    </p>
-    </footer>
-    <script type="text/javascript">
-      /** Timepicker function **/
-      $(document).ready(function(){
-        $('.timepicker').timepicker({
-            timeFormat: 'h:mm p',
-            interval: 60,
-            defaultTime: '08',
-            startTime: '01:00am',
-            dynamic: false,
-            dropdown: true,
-            scrollbar: true
-        });
-      });
-
-      var tablaElementos = document.getElementById('tabla-elementos');
-
-      var entrenadores = firebase.database().ref('entrenador');
-      entrenadores.on('child_added', function(data) {
-        //console.log(data.val());
-        // Capturar toda la info
-        var info = data.val();
-        info.key = data.key;
-
-        // Crear elementos
-        var tr = document.createElement('tr');
-        var td1 = document.createElement('td');
-        var td2 = document.createElement('td');
-        var td3 = document.createElement('td');
-        var td4 = document.createElement('td');
-        var td5 = document.createElement('td');
-        var td6 = document.createElement('td');
-        var td7 = document.createElement('td');
-        var td8 = document.createElement('td');
-        var td9 = document.createElement('td');
-        var td10 = document.createElement('td');
-        var td11 = document.createElement('td');
-        var td12 = document.createElement('td');
-
-        var text1 = document.createElement('h4');
-        var text2 = document.createElement('h4');
-        var text3 = document.createElement('h4');
-        var text4 = document.createElement('h4');
-        var text5 = document.createElement('h4');
-        var text6 = document.createElement('h4');
-        var text7 = document.createElement('h4');
-        var text8 = document.createElement('h4');
-        var text9 = document.createElement('h4');
-        var text10 = document.createElement('h4');
-        var button1 = document.createElement('button');
-        var button2 = document.createElement('button');
-
-        // Estructurar los elementos
-        td1.appendChild(text1);
-        td2.appendChild(text2);
-        td3.appendChild(text3);
-        td4.appendChild(text4);
-        td5.appendChild(text5);
-        td6.appendChild(text6);
-        td7.appendChild(text7);
-        td8.appendChild(text8);
-        td9.appendChild(text9);
-        td10.appendChild(text10);
-        td11.appendChild(button1);
-        td12.appendChild(button2);
-
-        tr.appendChild(td1);
-        tr.appendChild(td2);
-        tr.appendChild(td3);
-        tr.appendChild(td4);
-        tr.appendChild(td5);
-        tr.appendChild(td6);
-        tr.appendChild(td7);
-        tr.appendChild(td8);
-        tr.appendChild(td9);
-        tr.appendChild(td10);
-        tr.appendChild(td11);
-        tr.appendChild(td12);
-
-        // Dandoles texto a los objetos
-        text1.textContent = data.val().nombre;
-        text2.textContent = data.val().biografia;
-        text3.textContent = data.val().fecha_registro;
-        if(data.val().lunes) text4.textContent = data.val().lunes_inicio+" - "+data.val().lunes_fin;
-        else text4.textContent = "-";
-        if(data.val().martes) text5.textContent = data.val().martes_inicio+" - "+data.val().martes_fin;
-        else text5.textContent = "-";
-        if(data.val().miercoles) text6.textContent = data.val().miercoles_inicio+" - "+data.val().miercoles_fin;
-        else text6.textContent = "-";
-        if(data.val().jueves) text7.textContent = data.val().jueves_inicio+" - "+data.val().jueves_fin;
-        else text7.textContent = "-";
-        if(data.val().viernes) text8.textContent = data.val().viernes_inicio+" - "+data.val().viernes_fin;
-        else text8.textContent = "-";
-        if(data.val().sabado) text9.textContent = data.val().sabado_inicio+" - "+data.val().sabado_fin;
-        else text9.textContent = "-";
-        if(data.val().domingo) text10.textContent = data.val().domingo_inicio+" - "+data.val().domingo_fin;
-        else text10.textContent = "-";
-        button1.textContent = "Modificar";
-        button2.textContent = "Eliminar";
-
-        // Añadir bootstrap
-        button1.className = 'btn btn-warning';
-        button2.className = 'btn btn-danger';
-
-        // Acciones de los botones
-        button1.addEventListener('click', editar_entrenador);
-        button2.addEventListener('click', eliminar_entrenador);
-
-        // Capturando la data
-        button1.info = info;
-        button2.info = info;
-
-        // Creando modal de Edición
-        button1.setAttribute("data-toggle", "modal");
-        button1.setAttribute("data-target", "#modalEdition");
-
-        // Creando modal de Eliminacion de entrenador
-        button2.setAttribute("data-toggle", "modal");
-        button2.setAttribute("data-target", "#modalRemove");
-
-        // Añadir fondo color a la fila
-        tr.setAttribute("class","active");
-        // Crear la fila completa
-        tablaElementos.appendChild(tr);
-
-        //addCommentElement(postElement, data.key, data.val().text, data.val().author);
-      });
-
-      /** Editar Entrenador Modal**/
-      function editar_entrenador(event) {
-        console.log(this.info);
-        console.log("Edicion");
-
-        // Obtenemos los campos del formulario
-        var nombre = document.getElementById("nombre");
-        var biografia = document.getElementById("biografia");
-        //var imagen = document.getElementById("imagen");
-        //console.log(imagen.files[0]);
-
-        var lunes = document.getElementById("lunes");
-          var lunes_inicio = document.getElementById("lunes_inicio");
-          var lunes_fin = document.getElementById("lunes_fin");
-        var martes = document.getElementById("martes");
-          var martes_inicio = document.getElementById("martes_inicio");
-          var martes_fin = document.getElementById("martes_fin");
-        var miercoles = document.getElementById("miercoles");
-          var miercoles_inicio = document.getElementById("miercoles_inicio");
-          var miercoles_fin = document.getElementById("miercoles_fin");
-        var jueves = document.getElementById("jueves");
-          var jueves_inicio = document.getElementById("jueves_inicio");
-          var jueves_fin = document.getElementById("jueves_fin");
-        var viernes = document.getElementById("viernes");
-          var viernes_inicio = document.getElementById("viernes_inicio");
-          var viernes_fin = document.getElementById("viernes_fin");
-        var sabado = document.getElementById("sabado");
-          var sabado_inicio = document.getElementById("sabado_inicio");
-          var sabado_fin = document.getElementById("sabado_fin");
-        var domingo = document.getElementById("domingo");
-          var domingo_inicio = document.getElementById("domingo_inicio");
-          var domingo_fin = document.getElementById("domingo_fin");
-
-        // Info en el boton de guardar cambios
-        var button = document.getElementById("guardar_cambios");
-        button.addEventListener('click', update);
-        button.info = this.info;
-
-        // Procedemos a cargar datos
-        nombre.value = this.info.nombre;
-        biografia.value = this.info.biografia;
-        lunes.checked = this.info.lunes;
-          lunes_inicio.value = this.info.lunes_inicio;
-          lunes_fin.value = this.info.lunes_fin;
-        martes.checked = this.info.martes;
-          martes_inicio.value = this.info.martes_inicio;
-          martes_fin.value = this.info.martes_fin;
-        miercoles.checked = this.info.miercoles;
-          miercoles_inicio.value = this.info.miercoles_inicio;
-          miercoles_fin.value = this.info.miercoles_fin;
-        jueves.checked = this.info.jueves;
-          jueves_inicio.value = this.info.jueves_inicio;
-          jueves_fin.value = this.info.jueves_fin;
-        viernes.checked = this.info.viernes;
-          viernes_inicio.value = this.info.viernes_inicio;
-          viernes_fin.value = this.info.viernes_fin;
-        sabado.checked = this.info.sabado;
-          sabado_inicio.value = this.info.sabado_inicio;
-          sabado_fin.value = this.info.sabado_fin;
-        domingo.checked = this.info.domingo;
-          domingo_inicio.value = this.info.domingo_inicio;
-          domingo_fin.value = this.info.domingo_fin;
-      }
-
-      /** Registrar entrenador editado **/
-      var update = function(){
-        console.log(this.info)
-        var nombre = document.getElementById("nombre");
-        var biografia = document.getElementById("biografia");
-        var imagen = document.getElementById("imagen");
-        //console.log(imagen.files[0]);
-
-        var lunes = document.getElementById("lunes");
-          var lunes_inicio = document.getElementById("lunes_inicio");
-          var lunes_fin = document.getElementById("lunes_fin");
-        var martes = document.getElementById("martes");
-          var martes_inicio = document.getElementById("martes_inicio");
-          var martes_fin = document.getElementById("martes_fin");
-        var miercoles = document.getElementById("miercoles");
-          var miercoles_inicio = document.getElementById("miercoles_inicio");
-          var miercoles_fin = document.getElementById("miercoles_fin");
-        var jueves = document.getElementById("jueves");
-          var jueves_inicio = document.getElementById("jueves_inicio");
-          var jueves_fin = document.getElementById("jueves_fin");
-        var viernes = document.getElementById("viernes");
-          var viernes_inicio = document.getElementById("viernes_inicio");
-          var viernes_fin = document.getElementById("viernes_fin");
-        var sabado = document.getElementById("sabado");
-          var sabado_inicio = document.getElementById("sabado_inicio");
-          var sabado_fin = document.getElementById("sabado_fin");
-        var domingo = document.getElementById("domingo");
-          var domingo_inicio = document.getElementById("domingo_inicio");
-          var domingo_fin = document.getElementById("domingo_fin");
-
-        /* Imagen en veremos
-        //getfile
-        var file = imagen.files[0];
-        //create a storage ref
-        var storageRef = firebase.storage().ref('imagenes/'+file.name);
-
-        //upload file
-        var task = storageRef.put(file);
-        **/
-        var newData = {
-          nombre: nombre.value,
-          biografia: biografia.value,
-          lunes: lunes.checked,
-          lunes_inicio: lunes_inicio.value,
-          lunes_fin: lunes_fin.value,
-          martes: martes.checked,
-          martes_inicio: martes_inicio.value,
-          martes_fin: martes_fin.value,
-          miercoles: miercoles.checked,
-          miercoles_inicio: miercoles_inicio.value,
-          miercoles_fin: miercoles_fin.value,
-          jueves: jueves.checked,
-          jueves_inicio: jueves_inicio.value,
-          jueves_fin: jueves_fin.value,
-          viernes: viernes.checked,
-          viernes_inicio: viernes_inicio.value,
-          viernes_fin: viernes_fin.value,
-          sabado: sabado.checked,
-          sabado_inicio: sabado_inicio.value,
-          sabado_fin: sabado_fin.value,
-          domingo: domingo.checked,
-          domingo_inicio: domingo_inicio.value,
-          domingo_fin: domingo_fin.value,
-          fecha_registro: this.info.fecha_registro,
-          url_imagen: this.info.url_imagen
-        };
-
-        var updates = {};
-        updates['/entrenador/' + this.info.key] = newData;
-
-        firebase.database().ref().update(updates);
-        window.location.assign("listarPaginas.html");
-      }
-
-      /** Eliminar Entrenador Modal**/
-      function eliminar_entrenador(event) {
-        console.log(this.info);
-        var entrenador = document.getElementById("nombreEntrenador");
-        entrenador.innerHTML = this.info.nombre+"?";
-        // Info en el boton de eliminar
-        var button = document.getElementById("eliminar");
-        button.addEventListener('click', remove);
-        button.info = this.info;
-        console.log("Eliminar");
-      }
-
-      /** Eliminar Entrenador **/
-      function remove(event) {
-        console.log("Eliminado "+this.info.nombre);
-        firebase.database().ref("/entrenador/" + this.info.key).remove();
-        window.location.assign("listarPaginas.html");
-      }
-
-      /** Cerrar Sesión **/
-      var cerrar = document.getElementById('cerrarSesion');
-      cerrar.addEventListener('click', function () {
-        localStorage.removeItem("nombre");
-        localStorage.removeItem("userID");
-        window.location.assign("index.html");
-      });
-    </script>
+  <br>
+  <script src="listado.js"></script>
 </body>
 </html>
