--- a/lista_prospecto_general.html
+++ b/lista_prospecto_general.html
@@ -19,12 +19,15 @@
 
   <!-- Bootstrap core JavaScript
     ================================================== -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="dist/js/bootstrap.min.js"></script>
-    <script src="assets/js/docs.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
+  <script src="dist/js/bootstrap.min.js"></script>
+  <script src="assets/js/docs.min.js"></script>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
+
+  <!-- Excel -->
+  <script src="dist/js/excellentexport.js"></script>
 </head>
 
 <body>
@@ -92,8 +95,14 @@
               <th>Fecha de registro</th>
             </tr>
           </thead>
+          <tbody id="data">
+            
+          </tbody>
         </table>
       </div>
+      <a href="#" onclick="return ExcellentExport.excel(this, 'tablaBusqueda', 'Reporte');" class="btn btn-success btn-lg" id="buttonDescarga">
+        <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Exportar a Excel
+      </a>
       <div align="center">
         <nav aria-label="...">
           <ul class="pager">
