--- a/lista_prospecto_general.html
+++ b/lista_prospecto_general.html
@@ -11,21 +11,14 @@
   <title>Lista - Registro General</title>
   <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
   <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
-    <link href="dist/css/signin.css" rel="stylesheet">
-    <link href="dist/css/custom.css" rel="stylesheet">
-    <link href="dist/css/body.css" rel="stylesheet">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
-
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
+  <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
+  <link href="dist/css/signin.css" rel="stylesheet">
+  <link href="dist/css/custom.css" rel="stylesheet">
+  <link href="dist/css/body.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
   <script src="dist/js/bootstrap.min.js"></script>
   <script src="assets/js/docs.min.js"></script>
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
-
   <!-- Excel -->
   <script src="dist/js/excellentexport.js"></script>
 </head>
@@ -81,7 +74,7 @@
         </nav>
       </div>
       <div class="table-responsive">
-        <table class="table table-striped" id="tablaBusqueda">
+        <table class="table table-striped" id="tablaProspectos">
           <thead>
             <tr>
               <th>#</th><!-- class="col-md-2" -->
@@ -92,12 +85,10 @@
               <th>Información</th>
               <th>Ciudad</th>
               <th>País</th>
+              <th>Hora</th>
               <th>Fecha de registro</th>
             </tr>
           </thead>
-          <tbody id="data">
-            
-          </tbody>
         </table>
       </div>
       <a href="#" onclick="return ExcellentExport.excel(this, 'tablaBusqueda', 'Reporte');" class="btn btn-success btn-lg" id="buttonDescarga">
